syntax = "proto3";

package gameplay_service;

message UpdateReferralRequest {
    string userId = 1;
    string referralUserId = 2;
}